Tiny dark mode fixes

--- a/sass/content.scss
+++ b/sass/content.scss
@@ -6,6 +6,18 @@
 // content_class = "custom-class-name"
 
 .contentWrapper.stromata {
+  ol {
+    padding-left: 2.4em;
+
+    li {
+      padding-left: 0;
+
+      &::marker {
+        padding-right: 0;
+      }
+    }
+  }
+
   ul {
     list-style-type: none;
     padding-left: 1em;
